--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Essential Open Graph Tags -->
     <meta property="og:title" content="Mango Elite M&A Coaching - Scale Through Strategic Acquisitions">
-    <meta property="og:description" content="$4,771 to $17.57M in 36 months through 7 strategic acquisitions. The only M&A system built by someone who actually scaled through acquisitions.">
+    <meta property="og:description" content="$4,771 to $17.57M in 36 months through 7 strategic acquisitions. Proven M&A System: Add $1M+ Revenue in 60 Days Through Strategic Acquisitions.">
     <meta property="og:image" content="https://mangoelitecoaching.com/og-image.jpg">
     <meta property="og:url" content="https://mangoelitecoaching.com">
     <meta property="og:type" content="website">
@@ -1754,7 +1754,7 @@
             <div class="guarantee-icon">🛡️</div>
             <h3 class="guarantee-title">Our Iron-Clad Guarantee</h3>
             <div class="guarantee-text">
-                <p><strong>Get a signed Letter of Intent (LOI) on your first acquisition within 12 months, or we continue working together at no additional monthly fee until you do.</strong></p>
+                <p><strong>LOI Guarantee: Secure your first signed Letter of Intent within 12 months, or receive continued coaching at no additional cost.</strong></p>
                 <p style="margin-top: 20px;">We're not just promising vague "results" - we guarantee you'll have an accepted offer in hand. We'll personally help you source deals, structure offers, and negotiate terms until you have a signed LOI.</p>
             </div>
         </div>
@@ -1775,7 +1775,7 @@
         <div class="container">
             <div class="form-container">
                 <h2 class="form-title">Apply for Mango Elite Acquisition Coaching</h2>
-                <p class="form-subtitle">Start your application - we'll walk you through it step by step</p>
+                <p class="form-subtitle">Schedule Your M&A Strategy Call - Limited Q3 Spots Available</p>
                 
                 <form id="acquisition-application">
                     <div class="form-group">
