--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,7 @@
 <body>
     <!-- Urgency Bar -->
     <div class="urgency-bar">
-        🔥 LAST SPOT FOR Q3 2025 - We Only Take 3 Clients Per Quarter
+        🔥 Limited Enrollment - We Work With Select Clients to Ensure Results
     </div>
     
     <!-- Floating CTA -->
