og image update

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Essential Open Graph Tags -->
     <meta property="og:title" content="Mango Elite M&A Coaching - Scale Through Strategic Acquisitions">
     <meta property="og:description" content="$4,771 to $17.57M in 36 months through 7 strategic acquisitions. Proven M&A System: Add $1M+ Revenue in 60 Days Through Strategic Acquisitions.">
-    <meta property="og:image" content="https://mangoelitecoaching.com/og-image.jpg">
+    <meta property="og:image" content="https://mangoeliteacquisitioncoaching.com/og-image-ma.jpg">
     <meta property="og:url" content="https://mangoelitecoaching.com">
     <meta property="og:type" content="website">
 
