--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Essential Open Graph Tags -->
     <meta property="og:title" content="Mango Elite M&A Coaching - Scale Through Strategic Acquisitions">
-    <meta property="og:description" content="$4,771 to $17.57M in 36 months through 7 strategic acquisitions. Proven M&A System: Add $1M+ Revenue in 60 Days Through Strategic Acquisitions.">
-    <meta property="og:image" content="https://mangoeliteacquisitioncoaching.com/og-image-ma.jpg">
-    <meta property="og:url" content="https://mangoelitecoaching.com">
+  <!-- Update these meta tags -->
+<meta property="og:image" content="https://mangoeliteacquisitioncoaching.com/og-image-ma.png">
+<meta property="og:url" content="https://mangoeliteacquisitioncoaching.com">
+<meta property="og:description" content="Add $1M+ Revenue in 120 Days Through Strategic Acquisitions. Proven M&A System: $4,771 to $17.57M in 36 months through 7 acquisitions.">
     <meta property="og:type" content="website">
 
     <title>Mango Elite M&A Coaching - Scale Through Strategic Acquisitions</title>
